--- a/Views/View/Home.cshtml
+++ b/Views/View/Home.cshtml
@@ -6,12 +6,13 @@
     <title>Cadastro Hospital</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/containers.css" />
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">opopopop</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Cadastro Hospital</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -31,13 +32,24 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
-            test
+            <div id="cadastro-paciente">
+                <h1>Cadastro do Paciente</h1>
+                <input type="text" placeholder="Nome">
+                <input type="text" placeholder="Cpf">
+                <input type="text" placeholder="Nascimento">
+                <select placeholder="Test">
+                    <option value="" disabled selected>Sexo</option>
+                    <option value="volvo">Masculino</option>
+                    <option value="saab">Feminino</option>
+                    <option value="opel">Outro</option>
+                </select>
+            </div>
         </main>
     </div>
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - opopopop - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - Kayky Vitor Cruz - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
