--- a/Views/View/Home.cshtml
+++ b/Views/View/Home.cshtml
@@ -39,9 +39,9 @@
                 <input type="text" placeholder="Nascimento">
                 <select placeholder="Test">
                     <option value="" disabled selected>Sexo</option>
-                    <option value="volvo">Masculino</option>
-                    <option value="saab">Feminino</option>
-                    <option value="opel">Outro</option>
+                    <option value="M">Masculino</option>
+                    <option value="F">Feminino</option>
+                    <option value="O">Outro</option>
                 </select>
             </div>
         </main>
