--- a/Views/View/Home.cshtml
+++ b/Views/View/Home.cshtml
@@ -43,6 +43,9 @@
                     <option value="F">Feminino</option>
                     <option value="O">Outro</option>
                 </select>
+                <br><br>
+                <input type="text" placeholder="Email">
+                <input type="text" placeholder="Telefone">
             </div>
         </main>
     </div>
