--- a/Views/View/Home.cshtml
+++ b/Views/View/Home.cshtml
@@ -34,18 +34,20 @@
         <main role="main" class="pb-3">
             <div id="cadastro-paciente">
                 <h1>Cadastro do Paciente</h1>
-                <input type="text" placeholder="Nome">
-                <input type="text" placeholder="Cpf">
-                <input type="text" placeholder="Nascimento">
-                <select placeholder="Test">
+                <input type="text" id="nome_paciente" placeholder="Nome">
+                <input type="text" id="cpf_paciente" placeholder="Cpf">
+                <input type="text" id="nascimento_paciente" placeholder="Nascimento">
+                <select id="sexo_paciente">
                     <option value="" disabled selected>Sexo</option>
                     <option value="M">Masculino</option>
                     <option value="F">Feminino</option>
                     <option value="O">Outro</option>
                 </select>
-                <br><br>
-                <input type="text" placeholder="Email">
-                <input type="text" placeholder="Telefone">
+                <br>
+                <input type="text" id="email_paciente" placeholder="Email">
+                <input type="text" id="telefone_paciente" placeholder="Telefone">
+                <br>
+                <input type="submit">
             </div>
         </main>
     </div>
