--- a/Views/View/Home.cshtml
+++ b/Views/View/Home.cshtml
@@ -53,7 +53,7 @@
             <br>
             <!--Edição do do Paciente-->
             <div id="edicao-paciente">
-                <h1>Editar da Paciente</h1>
+                <h1>Editar Paciente</h1>
                 <input type="text" size="3" id="id_paciente" placeholder="Id">
                 <input type="text" id="nome_paciente" placeholder="Nome">
                 <input type="text" id="cpf_paciente" placeholder="Cpf">
