--- a/Views/View/Home.cshtml
+++ b/Views/View/Home.cshtml
@@ -55,18 +55,18 @@
             <div id="edicao-paciente">
                 <h1>Editar Paciente</h1>
                 <input type="text" size="3" id="id_paciente" placeholder="Id">
-                <input type="text" id="nome_paciente" placeholder="Nome">
-                <input type="text" id="cpf_paciente" placeholder="Cpf">
-                <input type="text" id="nascimento_paciente" placeholder="Nascimento">
-                <select id="sexo_paciente">
+                <input type="text" id="enome_paciente" placeholder="Nome">
+                <input type="text" id="ecpf_paciente" placeholder="Cpf">
+                <input type="text" id="enascimento_paciente" placeholder="Nascimento">
+                <select id="esexo_paciente">
                     <option value="" disabled selected>Sexo</option>
                     <option value="M">Masculino</option>
                     <option value="F">Feminino</option>
                     <option value="O">Outro</option>
                 </select>
                 <br>
-                <input type="text" id="email_paciente" placeholder="Email">
-                <input type="text" id="telefone_paciente" placeholder="Telefone">
+                <input type="text" id="eemail_paciente" placeholder="Email">
+                <input type="text" id="etelefone_paciente" placeholder="Telefone">
                 <br>
                 <input type="submit" value="Editar" onclick="EditarPaciente()">
             </div>
