--- a/Views/View/Home.cshtml
+++ b/Views/View/Home.cshtml
@@ -70,6 +70,10 @@
                 <br>
                 <input type="submit" value="Editar" onclick="EditarPaciente()">
             </div>
+            <!-- Remoção do Paciente -->
+            <div id="pacientes">
+                
+            </div>
         </main>
     </div>
 
