--- a/Views/View/Home.cshtml
+++ b/Views/View/Home.cshtml
@@ -70,7 +70,7 @@
                 <br>
                 <input type="submit" value="Editar" onclick="EditarPaciente()">
             </div>
-            <!-- Remoção do Paciente -->
+            <!-- Listar Pacientes -->
             <div id="pacientes">
                 
             </div>
