--- a/Views/View/Home.cshtml
+++ b/Views/View/Home.cshtml
@@ -75,6 +75,17 @@
             <div id="pacientes">
                 
             </div>
+            <br>
+            <!-- Cadastro Exames -->
+            <div id="cadastro-exame">
+                <h1>Cadastro de Exame</h1>
+                <input type="text" id="nome-exame" placeholder="Nome do Exame">
+                <input type="text" id="tipo-exame-id" placeholder="Id do tipo de exame">
+                <br><br>
+                <textarea id="descricao-exame" placeholder="Descrição do Exame"></textarea>
+                <br>
+                <input type="submit" value="Inserir" onclick="CadastrarExame()">
+            </div>
         </main>
     </div>
 
