--- a/Views/View/Home.cshtml
+++ b/Views/View/Home.cshtml
@@ -86,6 +86,11 @@
                 <br>
                 <input type="submit" value="Inserir" onclick="CadastrarExame()">
             </div>
+            <!--Listar Exames-->
+            <br>
+            <div id="exames">
+                
+            </div>
         </main>
     </div>
 
