--- a/Views/View/Home.cshtml
+++ b/Views/View/Home.cshtml
@@ -86,10 +86,21 @@
                 <br>
                 <input type="submit" value="Inserir" onclick="CadastrarExame()">
             </div>
+            <br>
+            <div id="edicao-exame">
+                <h1>Editar Exame</h1>
+                <input type="text" size="3" id="id-exame" placeholder="Id">
+                <input type="text" id="enome-exame" placeholder="Nome do Exame">
+                <input type="text" id="etipo-exame-id" placeholder="Id do tipo de exame">
+                <br><br>
+                <textarea id="edescricao-exame" placeholder="Descrição do Exame"></textarea>
+                <br>
+                <input type="submit" value="Inserir" onclick="EditarExame()">
+            </div>
             <!--Listar Exames-->
             <br>
             <div id="exames">
-                
+
             </div>
         </main>
     </div>
