--- a/Views/View/Home.cshtml
+++ b/Views/View/Home.cshtml
@@ -102,6 +102,15 @@
             <div id="exames">
 
             </div>
+            <!--Cadastro Tipos de exame-->
+            <div id="cadastro-tipo-exame">
+                <h1>Cadastro de Exame</h1>
+                <input type="text" id="nome-exame" placeholder="Nome do tipo de exame">
+                <br><br>
+                <textarea id="descricao-exame" placeholder="Descrição do Exame"></textarea>
+                <br>
+                <input type="submit" value="Inserir" onclick="CadastrarTipoExame()">
+            </div>
         </main>
     </div>
 
