--- a/Views/View/Home.cshtml
+++ b/Views/View/Home.cshtml
@@ -104,10 +104,10 @@
             </div>
             <!--Cadastro Tipos de exame-->
             <div id="cadastro-tipo-exame">
-                <h1>Cadastro de Exame</h1>
+                <h1>Cadastro de tipo de exame</h1>
                 <input type="text" id="nome-exame" placeholder="Nome do tipo de exame">
                 <br><br>
-                <textarea id="descricao-exame" placeholder="Descrição do Exame"></textarea>
+                <textarea id="descricao-exame" placeholder="Descrição do tipo de exame"></textarea>
                 <br>
                 <input type="submit" value="Inserir" onclick="CadastrarTipoExame()">
             </div>
