--- a/Views/View/Home.cshtml
+++ b/Views/View/Home.cshtml
@@ -105,9 +105,9 @@
             <!--Cadastro Tipos de exame-->
             <div id="cadastro-tipo-exame">
                 <h1>Cadastro de tipo de exame</h1>
-                <input type="text" id="enome-exame" placeholder="Nome do tipo de exame">
+                <input type="text" id="nome-tipo-exame" placeholder="Nome do tipo de exame">
                 <br><br>
-                <textarea id="edescricao-exame" placeholder="Descrição do tipo de exame"></textarea>
+                <textarea id="descricao-tipo-exame" placeholder="Descrição do tipo de exame"></textarea>
                 <br>
                 <input type="submit" value="Inserir" onclick="CadastrarTipoExame()">
             </div>
