Atualização - View/Script

--- a/Views/View/Home.cshtml
+++ b/Views/View/Home.cshtml
@@ -111,6 +111,11 @@
                 <br>
                 <input type="submit" value="Inserir" onclick="CadastrarTipoExame()">
             </div>
+            <!--Listar tipos de exame-->
+            <br>
+            <div id="tipo-exames">
+
+            </div>
         </main>
     </div>
 
