Correção - Função Alterar TipoExame

--- a/Views/View/Home.cshtml
+++ b/Views/View/Home.cshtml
@@ -112,6 +112,16 @@
                 <br>
                 <input type="submit" value="Inserir" onclick="CadastrarTipoExame()">
             </div>
+            <br><br>
+            <div id="edicao-tipo-exame">
+                <h1>Editar tipo de exame</h1>
+                <input type="text" size="3" id="id-tipo-exame" placeholder="Id">
+                <input type="text" id="enome-tipo-exame" placeholder="Nome do Exame">
+                <br><br>
+                <textarea id="edescricao-tipo-exame" placeholder="Descrição do Exame"></textarea>
+                <br>
+                <input type="submit" value="Inserir" onclick="EditarExame()">
+            </div>
             <!--Listar tipos de exame-->
             <br>
             <div id="tipo-exames">
