Correções - View/Script

--- a/Views/View/Home.cshtml
+++ b/Views/View/Home.cshtml
@@ -120,7 +120,7 @@
                 <br><br>
                 <textarea id="edescricao-tipo-exame" placeholder="Descrição do Exame"></textarea>
                 <br>
-                <input type="submit" value="Inserir" onclick="EditarExame()">
+                <input type="submit" value="Inserir" onclick="EditarTipoExame()">
             </div>
             <!--Listar tipos de exame-->
             <br>
