--- a/Views/View/Consultas.cshtml
+++ b/Views/View/Consultas.cshtml
@@ -32,7 +32,12 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
-            
+            <div id="gerenciar-consulta">
+                <h1>Marcar Consulta</h1>
+                <input type="text" id="id_paciente" placeholder="Id Paciente">
+                <input type="text" id="id_exame" placeholder="Id Exame">
+                <input type="text" id="data_consulta" placeholder="Data">
+            </div>
         </main>
     </div>
 
