Atualização - View/Script

--- a/Views/View/Consultas.cshtml
+++ b/Views/View/Consultas.cshtml
@@ -37,6 +37,7 @@
                 <input type="text" id="id_paciente" placeholder="Id Paciente">
                 <input type="text" id="id_exame" placeholder="Id Exame">
                 <input type="text" id="data_consulta" placeholder="Data">
+                <input type="submit" value="Marcar" onclick="MarcarConsulta()">
             </div>
         </main>
     </div>
