Correções diversas - Controllers/Gerenciador de Consultas

--- a/Views/View/Consultas.cshtml
+++ b/Views/View/Consultas.cshtml
@@ -39,6 +39,11 @@
                 <input type="text" id="data_consulta" placeholder="Data">
                 <input type="submit" value="Marcar" onclick="MarcarConsulta()">
             </div>
+            <!--Listar Consultas-->
+            <br>
+            <div id="consultas">
+
+            </div>
         </main>
     </div>
 
