--- a/Views/View/Home.cshtml
+++ b/Views/View/Home.cshtml
@@ -133,7 +133,7 @@
     <script src="~/js/site.js"></script>
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - Kayky Vitor Cruz - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - Kayky Vitor Cruz
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
